refactor(frontend): translations

--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -1,63 +1,63 @@
 {
-  "background.error.title.common": "Ошибка",
-  "background.error.title.token-expired": "Срок действия токена безопасности документа истек",
-  "background.error.title.create-room": "К сожалению, у вас нет разрешения на создание комнат",
-  "background.error.subtitle.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
-  "background.error.subtitle.token-expired": "Что-то пошло не так. Пожалуйста, авторизуйте приложение повторно",
-  "background.error.subtitle.plugin.not-active.message": "Приложение ONLYOFFICE DocSpace недоступно",
-  "background.error.subtitle.plugin.not-active.help": "Пожалуйста, подождите, когда администратор Pipedrive настроит приложение",
-  "background.error.subtitle.docspace-connection": "Вы не подключены к ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.message": "Не удается авторизоваться в ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.help": "Пожалуйста, перейдите к настройкам авторизации, чтобы настроить приложение",
-  "background.error.subtitle.create-room": "Пожалуйста, попросите администратора Pipedrive создать комнату или свяжитесь с администратором DocSpace для обновления вашей роли.",
-  "background.error.hint.admin.docspace-connection": "Пожалуйста, перейдите к Настройкам соединения, чтобы настроить приложение.",
-  "background.error.hint.docspace-connection": "Пожалуйста, обратитесь к администратору",
-  "button.reauthorize": "Авторизуйтесь повторно",
-  "button.settings": "Настройки",
-  "button.create.room": "Создать комнату",
-  "button.login": "Войти",
-  "button.logout": "Выйти",
-  "button.disconnect": "Отключиться",
-  "button.connect": "Подключиться",
-  "button.change": "Изменить",
-  "button.cancel": "Отменить",
-  "button.save": "Сохранить",
-  "docspace.error.unreached": "Не удается войти в ONLYOFFICE DocSpace",
-  "docspace.error.login": "Не удалось идентифицировать пользователя",
-  "docspace.error.loading": "Ошибка загрузки ONLYOFFICE DocSpace",
-  "docspace.error.csp": "Текущий домен не установлен в настройках Политики безопасности контента (CSP). Пожалуйста, добавьте его через раздел Инструменты разработчика.",
-  "docspace.link.developer-tools": "Раздел Инструменты разработчика",
-  "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
-  "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
-  "room.create.description": "Создайте комнату ONLYOFFICE DocSpace, чтобы эффективно работать совместно над данной сделкой",
-  "notification.system-user.not-found": "Пользователь системы не установлен.",
-  "notification.plugin.set-system-user": "Пожалуйста, перейдите в Настройки и назначьте себя пользователем системы.",
-  "notification.plugin.functionality-is-limited": "Функциональные возможности плагина ограничены.",
-  "settings.authorization.login.system.confirm": "Вы согласны подключить вашу учетную запись DocSpace? Приложение будет использовать ее, чтобы выполнять действия",
-  "settings.authorization.deleting.system.confirm": "Вы уверены, что хотите выйти? Вы являетесь пользователем системы, и это действие ограничит функциональные возможности ONLYOFFICE DocSpace.",
-  "settings.authorization.deleting.ok": "Авторизация ONLYOFFICE DocSpace успешно удалена",
-  "settings.authorization.saving.ok": "Авторизация ONLYOFFICE DocSpace успешно сохранена",
-  "settings.authorization.saving.error": "Не удалось сохранить авторизацию ONLYOFFICE DocSpace",
-  "settings.authorization.title": "Войти в учетную запись ONLYOFFICE DocSpace",
-  "settings.authorization.status.authorized": "Вы успешно вошли в свою учетную запись ONLYOFFICE DocSpace",
-  "settings.authorization.status.system": "Текущий пользователь является <semibold>администратором системы</semibold>",
-  "settings.authorization.inputs.email": "Электронная почта",
-  "settings.authorization.inputs.password": "Пароль",
-  "settings.authorization.inputs.system.title": "Используйте данную учетную запись в качестве пользователя системы (роль администратора DocSpace не требуется)",
-  "settings.authorization.inputs.system.help": "Если вы нажмете на этот переключатель, плагин будет выполнять действия из вашей учетной записи DocSpace",
-  "settings.authorization.menu-item": "Авторизация",
-  "settings.connection.saving.error.forbidden": "Указанный пользователь не является администратором ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
-  "settings.connection.saving.ok": "Настройки ONLYOFFICE DocSpace сохранены",
-  "settings.connection.disconnection.description": "Вы уверены, что хотите отключить ONLYOFFICE DocSpace? Это приведет к потере всех соединений между сделками и комнатами DocSpace. Также будут удалены все данные авторизации пользователей",
-  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace успешно отключен",
-  "settings.connection.disconnection.error": "Не удалось отключить ONLYOFFICE DocSpace",
-  "settings.connection.title": "Настройте подключение приложения ONLYOFFICE DocSpace",
-  "settings.connection.hint.csp.title": "Проверить настройки Политики безопасности контента (CSP)",
-  "settings.connection.hint.csp.message": "Перед подключением приложения, пожалуйста, перейдите к <semibold>{{path}}</semibold> и добавьте следующие реквизиты пользователя в список разрешений",
-  "settings.connection.hint.csp.path": "Настройки DocSpace – Инструменты разработчика - JavaScript SDK",
-  "settings.connection.hint.csp.pipedrive-adress": "Адрес портала Pipedrive",
-  "settings.connection.hint.csp.docspace-adress": "Приложение ONLYOFFICE DocSpace",
-  "settings.connection.inputs.address": "Адрес ONLYOFFICE DocSpace",
-  "settings.connection.menu-item": "Соединение"
+  "background.error.title.common": "РћС€РёР±РєР°",
+  "background.error.title.token-expired": "РЎСЂРѕРє РґРµР№СЃС‚РІРёСЏ С‚РѕРєРµРЅР° Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё РґРѕРєСѓРјРµРЅС‚Р° РёСЃС‚РµРє",
+  "background.error.title.create-room": "Рљ СЃРѕР¶Р°Р»РµРЅРёСЋ, Сѓ РІР°СЃ РЅРµС‚ СЂР°Р·СЂРµС€РµРЅРёСЏ РЅР° СЃРѕР·РґР°РЅРёРµ РєРѕРјРЅР°С‚",
+  "background.error.subtitle.common": "Р§С‚Рѕ-С‚Рѕ РїРѕС€Р»Рѕ РЅРµ С‚Р°Рє. РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРµСЂРµР·Р°РіСЂСѓР·РёС‚Рµ РїСЂРёР»РѕР¶РµРЅРёРµ",
+  "background.error.subtitle.token-expired": "Р§С‚Рѕ-С‚Рѕ РїРѕС€Р»Рѕ РЅРµ С‚Р°Рє. РџРѕР¶Р°Р»СѓР№СЃС‚Р°, Р°РІС‚РѕСЂРёР·СѓР№С‚Рµ РїСЂРёР»РѕР¶РµРЅРёРµ РїРѕРІС‚РѕСЂРЅРѕ",
+  "background.error.subtitle.plugin.not-active.message": "РџСЂРёР»РѕР¶РµРЅРёРµ ONLYOFFICE DocSpace РЅРµРґРѕСЃС‚СѓРїРЅРѕ",
+  "background.error.subtitle.plugin.not-active.help": "РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРѕРґРѕР¶РґРёС‚Рµ, РєРѕРіРґР° Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂ Pipedrive РЅР°СЃС‚СЂРѕРёС‚ РїСЂРёР»РѕР¶РµРЅРёРµ",
+  "background.error.subtitle.docspace-connection": "Р’С‹ РЅРµ РїРѕРґРєР»СЋС‡РµРЅС‹ Рє ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-authorization.message": "РќРµ СѓРґР°РµС‚СЃСЏ Р°РІС‚РѕСЂРёР·РѕРІР°С‚СЊСЃСЏ РІ ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-authorization.help": "РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРµСЂРµР№РґРёС‚Рµ Рє РЅР°СЃС‚СЂРѕР№РєР°Рј Р°РІС‚РѕСЂРёР·Р°С†РёРё, С‡С‚РѕР±С‹ РЅР°СЃС‚СЂРѕРёС‚СЊ РїСЂРёР»РѕР¶РµРЅРёРµ",
+  "background.error.subtitle.create-room": "РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРѕРїСЂРѕСЃРёС‚Рµ Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂР° Pipedrive СЃРѕР·РґР°С‚СЊ РєРѕРјРЅР°С‚Сѓ РёР»Рё СЃРІСЏР¶РёС‚РµСЃСЊ СЃ Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂРѕРј DocSpace РґР»СЏ РѕР±РЅРѕРІР»РµРЅРёСЏ РІР°С€РµР№ СЂРѕР»Рё.",
+  "background.error.hint.admin.docspace-connection": "РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРµСЂРµР№РґРёС‚Рµ Рє РќР°СЃС‚СЂРѕР№РєР°Рј СЃРѕРµРґРёРЅРµРЅРёСЏ, С‡С‚РѕР±С‹ РЅР°СЃС‚СЂРѕРёС‚СЊ РїСЂРёР»РѕР¶РµРЅРёРµ.",
+  "background.error.hint.docspace-connection": "РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РѕР±СЂР°С‚РёС‚РµСЃСЊ Рє Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂСѓ",
+  "button.reauthorize": "РђРІС‚РѕСЂРёР·СѓР№С‚РµСЃСЊ РїРѕРІС‚РѕСЂРЅРѕ",
+  "button.settings": "РќР°СЃС‚СЂРѕР№РєРё",
+  "button.create.room": "РЎРѕР·РґР°С‚СЊ РєРѕРјРЅР°С‚Сѓ",
+  "button.login": "Р’РѕР№С‚Рё",
+  "button.logout": "Р’С‹Р№С‚Рё",
+  "button.disconnect": "РћС‚РєР»СЋС‡РёС‚СЊСЃСЏ",
+  "button.connect": "РџРѕРґРєР»СЋС‡РёС‚СЊСЃСЏ",
+  "button.change": "РР·РјРµРЅРёС‚СЊ",
+  "button.cancel": "РћС‚РјРµРЅРёС‚СЊ",
+  "button.save": "РЎРѕС…СЂР°РЅРёС‚СЊ",
+  "docspace.error.unreached": "РќРµ СѓРґР°РµС‚СЃСЏ РІРѕР№С‚Рё РІ ONLYOFFICE DocSpace",
+  "docspace.error.login": "РќРµ СѓРґР°Р»РѕСЃСЊ РёРґРµРЅС‚РёС„РёС†РёСЂРѕРІР°С‚СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ",
+  "docspace.error.loading": "РћС€РёР±РєР° Р·Р°РіСЂСѓР·РєРё ONLYOFFICE DocSpace",
+  "docspace.error.csp": "РўРµРєСѓС‰РёР№ РґРѕРјРµРЅ РЅРµ СѓСЃС‚Р°РЅРѕРІР»РµРЅ РІ РЅР°СЃС‚СЂРѕР№РєР°С… РџРѕР»РёС‚РёРєРё Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё РєРѕРЅС‚РµРЅС‚Р° (CSP). РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РґРѕР±Р°РІСЊС‚Рµ РµРіРѕ С‡РµСЂРµР· СЂР°Р·РґРµР» РРЅСЃС‚СЂСѓРјРµРЅС‚С‹ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєР°.",
+  "docspace.link.developer-tools": "Р Р°Р·РґРµР» РРЅСЃС‚СЂСѓРјРµРЅС‚С‹ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєР°",
+  "room.creating.ok": "РљРѕРјРЅР°С‚Р° ONLYOFFICE DocSpace СѓСЃРїРµС€РЅРѕ СЃРѕР·РґР°РЅР°!",
+  "room.creating.error": "РќРµ СѓРґР°Р»РѕСЃСЊ СЃРѕР·РґР°С‚СЊ РєРѕРјРЅР°С‚Сѓ ONLYOFFICE DocSpace!",
+  "room.create.description": "РЎРѕР·РґР°Р№С‚Рµ РєРѕРјРЅР°С‚Сѓ ONLYOFFICE DocSpace, С‡С‚РѕР±С‹ СЌС„С„РµРєС‚РёРІРЅРѕ СЂР°Р±РѕС‚Р°С‚СЊ СЃРѕРІРјРµСЃС‚РЅРѕ РЅР°Рґ РґР°РЅРЅРѕР№ СЃРґРµР»РєРѕР№",
+  "notification.system-user.not-found": "РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ СЃРёСЃС‚РµРјС‹ РЅРµ СѓСЃС‚Р°РЅРѕРІР»РµРЅ.",
+  "notification.plugin.set-system-user": "РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРµСЂРµР№РґРёС‚Рµ РІ РќР°СЃС‚СЂРѕР№РєРё Рё РЅР°Р·РЅР°С‡СЊС‚Рµ СЃРµР±СЏ РїРѕР»СЊР·РѕРІР°С‚РµР»РµРј СЃРёСЃС‚РµРјС‹.",
+  "notification.plugin.functionality-is-limited": "Р¤СѓРЅРєС†РёРѕРЅР°Р»СЊРЅС‹Рµ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё РїР»Р°РіРёРЅР° РѕРіСЂР°РЅРёС‡РµРЅС‹.",
+  "settings.authorization.login.system.confirm": "Р’С‹ СЃРѕРіР»Р°СЃРЅС‹ РїРѕРґРєР»СЋС‡РёС‚СЊ РІР°С€Сѓ СѓС‡РµС‚РЅСѓСЋ Р·Р°РїРёСЃСЊ DocSpace? РџСЂРёР»РѕР¶РµРЅРёРµ Р±СѓРґРµС‚ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ РµРµ, С‡С‚РѕР±С‹ РІС‹РїРѕР»РЅСЏС‚СЊ РґРµР№СЃС‚РІРёСЏ",
+  "settings.authorization.deleting.system.confirm": "Р’С‹ СѓРІРµСЂРµРЅС‹, С‡С‚Рѕ С…РѕС‚РёС‚Рµ РІС‹Р№С‚Рё? Р’С‹ СЏРІР»СЏРµС‚РµСЃСЊ РїРѕР»СЊР·РѕРІР°С‚РµР»РµРј СЃРёСЃС‚РµРјС‹, Рё СЌС‚Рѕ РґРµР№СЃС‚РІРёРµ РѕРіСЂР°РЅРёС‡РёС‚ С„СѓРЅРєС†РёРѕРЅР°Р»СЊРЅС‹Рµ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё ONLYOFFICE DocSpace.",
+  "settings.authorization.deleting.ok": "РђРІС‚РѕСЂРёР·Р°С†РёСЏ ONLYOFFICE DocSpace СѓСЃРїРµС€РЅРѕ СѓРґР°Р»РµРЅР°",
+  "settings.authorization.saving.ok": "РђРІС‚РѕСЂРёР·Р°С†РёСЏ ONLYOFFICE DocSpace СѓСЃРїРµС€РЅРѕ СЃРѕС…СЂР°РЅРµРЅР°",
+  "settings.authorization.saving.error": "РќРµ СѓРґР°Р»РѕСЃСЊ СЃРѕС…СЂР°РЅРёС‚СЊ Р°РІС‚РѕСЂРёР·Р°С†РёСЋ ONLYOFFICE DocSpace",
+  "settings.authorization.title": "Р’РѕР№С‚Рё РІ СѓС‡РµС‚РЅСѓСЋ Р·Р°РїРёСЃСЊ ONLYOFFICE DocSpace",
+  "settings.authorization.status.authorized": "Р’С‹ СѓСЃРїРµС€РЅРѕ РІРѕС€Р»Рё РІ СЃРІРѕСЋ СѓС‡РµС‚РЅСѓСЋ Р·Р°РїРёСЃСЊ ONLYOFFICE DocSpace",
+  "settings.authorization.status.system": "РўРµРєСѓС‰РёР№ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ СЏРІР»СЏРµС‚СЃСЏ <semibold>Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂРѕРј СЃРёСЃС‚РµРјС‹</semibold>",
+  "settings.authorization.inputs.email": "Р­Р»РµРєС‚СЂРѕРЅРЅР°СЏ РїРѕС‡С‚Р°",
+  "settings.authorization.inputs.password": "РџР°СЂРѕР»СЊ",
+  "settings.authorization.inputs.system.title": "РСЃРїРѕР»СЊР·СѓР№С‚Рµ РґР°РЅРЅСѓСЋ СѓС‡РµС‚РЅСѓСЋ Р·Р°РїРёСЃСЊ РІ РєР°С‡РµСЃС‚РІРµ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ СЃРёСЃС‚РµРјС‹ (СЂРѕР»СЊ Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂР° DocSpace РЅРµ С‚СЂРµР±СѓРµС‚СЃСЏ)",
+  "settings.authorization.inputs.system.help": "Р•СЃР»Рё РІС‹ РЅР°Р¶РјРµС‚Рµ РЅР° СЌС‚РѕС‚ РїРµСЂРµРєР»СЋС‡Р°С‚РµР»СЊ, РїР»Р°РіРёРЅ Р±СѓРґРµС‚ РІС‹РїРѕР»РЅСЏС‚СЊ РґРµР№СЃС‚РІРёСЏ РёР· РІР°С€РµР№ СѓС‡РµС‚РЅРѕР№ Р·Р°РїРёСЃРё DocSpace",
+  "settings.authorization.menu-item": "РђРІС‚РѕСЂРёР·Р°С†РёСЏ",
+  "settings.connection.saving.error.forbidden": "РЈРєР°Р·Р°РЅРЅС‹Р№ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ РЅРµ СЏРІР»СЏРµС‚СЃСЏ Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂРѕРј ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.undefined": "РќРµ СѓРґР°Р»РѕСЃСЊ СЃРѕС…СЂР°РЅРёС‚СЊ РЅР°СЃС‚СЂРѕР№РєРё ONLYOFFICE DocSpace",
+  "settings.connection.saving.ok": "РќР°СЃС‚СЂРѕР№РєРё ONLYOFFICE DocSpace СЃРѕС…СЂР°РЅРµРЅС‹",
+  "settings.connection.disconnection.description": "Р’С‹ СѓРІРµСЂРµРЅС‹, С‡С‚Рѕ С…РѕС‚РёС‚Рµ РѕС‚РєР»СЋС‡РёС‚СЊ ONLYOFFICE DocSpace? Р­С‚Рѕ РїСЂРёРІРµРґРµС‚ Рє РїРѕС‚РµСЂРµ РІСЃРµС… СЃРѕРµРґРёРЅРµРЅРёР№ РјРµР¶РґСѓ СЃРґРµР»РєР°РјРё Рё РєРѕРјРЅР°С‚Р°РјРё DocSpace. РўР°РєР¶Рµ Р±СѓРґСѓС‚ СѓРґР°Р»РµРЅС‹ РІСЃРµ РґР°РЅРЅС‹Рµ Р°РІС‚РѕСЂРёР·Р°С†РёРё РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№",
+  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace СѓСЃРїРµС€РЅРѕ РѕС‚РєР»СЋС‡РµРЅ",
+  "settings.connection.disconnection.error": "РќРµ СѓРґР°Р»РѕСЃСЊ РѕС‚РєР»СЋС‡РёС‚СЊ ONLYOFFICE DocSpace",
+  "settings.connection.title": "РќР°СЃС‚СЂРѕР№С‚Рµ РїРѕРґРєР»СЋС‡РµРЅРёРµ РїСЂРёР»РѕР¶РµРЅРёСЏ ONLYOFFICE DocSpace",
+  "settings.connection.hint.csp.title": "РџСЂРѕРІРµСЂРёС‚СЊ РЅР°СЃС‚СЂРѕР№РєРё РџРѕР»РёС‚РёРєРё Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё РєРѕРЅС‚РµРЅС‚Р° (CSP)",
+  "settings.connection.hint.csp.message": "РџРµСЂРµРґ РїРѕРґРєР»СЋС‡РµРЅРёРµРј РїСЂРёР»РѕР¶РµРЅРёСЏ, РїРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРµСЂРµР№РґРёС‚Рµ Рє <semibold>{{path}}</semibold> Рё РґРѕР±Р°РІСЊС‚Рµ СЃР»РµРґСѓСЋС‰РёРµ СЂРµРєРІРёР·РёС‚С‹ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РІ СЃРїРёСЃРѕРє СЂР°Р·СЂРµС€РµРЅРёР№",
+  "settings.connection.hint.csp.path": "РќР°СЃС‚СЂРѕР№РєРё DocSpace вЂ“ РРЅСЃС‚СЂСѓРјРµРЅС‚С‹ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєР° - JavaScript SDK",
+  "settings.connection.hint.csp.pipedrive-adress": "РђРґСЂРµСЃ РїРѕСЂС‚Р°Р»Р° Pipedrive",
+  "settings.connection.hint.csp.docspace-adress": "РџСЂРёР»РѕР¶РµРЅРёРµ ONLYOFFICE DocSpace",
+  "settings.connection.inputs.address": "РђРґСЂРµСЃ ONLYOFFICE DocSpace",
+  "settings.connection.menu-item": "РЎРѕРµРґРёРЅРµРЅРёРµ"
 }
