fix(frontend): show notification if in process creating room return status 402

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -25,8 +25,10 @@
   "docspace.error.unreached": "ONLYOFFICE DocSpace ist nicht erreichbar",
   "docspace.error.login": "Benutzerauthentifizierung fehlgeschlagen",
   "docspace.error.loading": "Fehler beim Laden von ONLYOFFICE DocSpace",
+  "docspace.error.payment": "Das Erstellen dieses Raums ist nicht möglich, da das Limit für die Anzahl der Räume in Ihrem aktuellen Plan erreicht ist.",
   "docspace.error.csp": "Die aktuelle Domäne ist nicht in den Einstellungen der Content Security Policy (CSP) festgelegt. Bitte fügen Sie sie über den Abschnitt Entwickler-Tools hinzu.",
   "docspace.link.developer-tools": "Abschnitt Entwickler-Tools",
+  "docspace.link.payments": "Preisplan aktualisieren",
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
   "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum für die einfache Zusammenarbeit an Dokumenten in diesem Deal",
