--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -25,8 +25,10 @@
   "docspace.error.unreached": "ONLYOFFICE DocSpace cannot be reached",
   "docspace.error.login": "User authentication failed",
   "docspace.error.loading": "Error loading ONLYOFFICE DocSpace",
+  "docspace.error.payment": "Creating this room is not possible since the limit is reached for the number of rooms included in your current plan.",
   "docspace.error.csp": "The current domain is not set in the Content Security Policy (CSP) settings. Please add it via the Developer Tools section.",
   "docspace.link.developer-tools": "Developer Tools section",
+  "docspace.link.payments": "Upgrade plan",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
   "room.create.description": "Create ONLYOFFICE DocSpace room to easily collaborate on documents in this deal",
