--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -25,8 +25,10 @@
   "docspace.error.unreached": "ONLYOFFICE DocSpace no está disponible",
   "docspace.error.login": "Error de autenticación de usuario",
   "docspace.error.loading": "Error al cargar ONLYOFFICE DocSpace",
+  "docspace.error.payment": "No es posible crear esta sala ya que se ha alcanzado el límite para el número de salas incluidas en su plan actual.",
   "docspace.error.csp": "El dominio actual no está configurado en los ajustes de la Política de seguridad de contenidos (CSP). Por favor, añádalo a través de la sección Herramientas para desarrolladores.",
   "docspace.link.developer-tools": "Sección Herramientas para desarrolladores",
+  "docspace.link.payments": "Actualizar el plan",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
   "room.create.description": "Cree una sala de ONLYOFFICE DocSpace para colaborar fácilmente en los documentos de este acuerdo",
