--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -25,8 +25,10 @@
   "docspace.error.unreached": "ONLYOFFICE DocSpace n'est pas accessible",
   "docspace.error.login": "Échec de l'authentification de l'utilisateur",
   "docspace.error.loading": "Erreur de chargement d'ONLYOFFICE DocSpace",
+  "docspace.error.payment": "La création de cette salle n'est pas possible puisque la limite est atteinte pour le nombre de salles incluses dans votre plan actuel.",
   "docspace.error.csp": "Le domaine actuel n'est pas défini dans les paramètres de la politique de sécurité du contenu (CSP). Veuillez l'ajouter via la section Outils de développement.",
   "docspace.link.developer-tools": "Section des outils de développement",
+  "docspace.link.payments": "Mettre à jour le plan",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
   "room.create.description": "Créez une salle ONLYOFFICE DocSpace pour collaborer facilement sur des documents dans le cadre de cette transaction",
