--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -25,8 +25,10 @@
   "docspace.error.unreached": "ONLYOFFICE DocSpace に接続できません",
   "docspace.error.login": "ユーザー認証に失敗しました",
   "docspace.error.loading": "ONLYOFFICE DocSpace の読み込みエラー",
+  "docspace.error.payment": "現在ご契約中のプランのルーム数が上限に達しているため、このルームの作成はできません。",
   "docspace.error.csp": "現在のドメインはコンテンツセキュリティポリシー (CSP) 設定に設定されていません。開発者ツールセクションから追加してください。",
   "docspace.link.developer-tools": "開発者ツールセクション",
+  "docspace.link.payments": "プランのアップグレード",
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
   "room.create.description": "この案件のドキュメントで簡単に共同作業を行うために、ONLYOFFICE DocSpace ルームを作成してください",
