--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -25,8 +25,10 @@
   "docspace.error.unreached": "ONLYOFFICE DocSpace não pode ser acessado",
   "docspace.error.login": "Falha na autenticação do usuário",
   "docspace.error.loading": "Erro ao carregar o ONLYOFFICE DocSpace",
+  "docspace.error.payment": "Não é possível criar esta sala, pois o limite foi atingido para o número de salas incluídas no seu plano atual.",
   "docspace.error.csp": "O domínio atual não está definido nas configurações da Política de segurança de conteúdo (CSP). Adicione-o por meio da seção Ferramentas do desenvolvedor.",
   "docspace.link.developer-tools": "Seção Ferramentas do desenvolvedor",
+  "docspace.link.payments": "Plano de upgrade",
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
   "room.create.description": "Crie uma sala ONLYOFFICE DocSpace para colaborar facilmente em documentos neste acordo",
