--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -25,8 +25,10 @@
   "docspace.error.unreached": "Impossibile raggiungere ONLYOFFICE DocSpace",
   "docspace.error.login": "Autenticazione utente fallita",
   "docspace.error.loading": "Errore durante il caricamento di ONLYOFFICE DocSpace",
+  "docspace.error.payment": "Non è possibile creare la stanza. È stato raggiunto il limite del numero di stanze incluse nel tuo piano attuale.",
   "docspace.error.csp": "Il dominio corrente non è impostato nelle impostazioni della politica di sicurezza dei contenuti (CSP). Aggiungilo tramite la sezione Strumenti per sviluppatori.",
   "docspace.link.developer-tools": "Sezione Strumenti per sviluppatori",
+  "docspace.link.payments": "Esegui l'upgrade del tuo piano",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
   "room.create.description": "Crea una stanza ONLYOFFICE DocSpace per collaborare facilmente sui documenti di questo accordo",
