--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -2,6 +2,7 @@
   "background.error.title.common": "Ошибка",
   "background.error.title.token-expired": "Срок действия токена безопасности документа истек",
   "background.error.title.create-room": "К сожалению, у вас нет разрешения на создание комнат",
+  "background.error.title.no-room-access": "К сожалению, у вас нет доступа к этой комнате",
   "background.error.subtitle.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
   "background.error.subtitle.token-expired": "Что-то пошло не так. Пожалуйста, авторизуйте приложение повторно",
   "background.error.subtitle.plugin.not-active.message": "Приложение ONLYOFFICE DocSpace недоступно",
@@ -10,6 +11,7 @@
   "background.error.subtitle.docspace-authorization.message": "Не удается авторизоваться в ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Пожалуйста, перейдите к настройкам авторизации, чтобы настроить приложение",
   "background.error.subtitle.create-room": "Пожалуйста, попросите администратора Pipedrive создать комнату или свяжитесь с администратором DocSpace для обновления вашей роли.",
+  "background.error.subtitle.no-room-access": "Пожалуйста, попробуйте запросить доступ",
   "background.error.hint.admin.docspace-connection": "Пожалуйста, перейдите к Настройкам соединения, чтобы настроить приложение.",
   "background.error.hint.docspace-connection": "Пожалуйста, обратитесь к администратору",
   "button.reauthorize": "Авторизуйтесь повторно",
@@ -22,6 +24,7 @@
   "button.change": "Изменить",
   "button.cancel": "Отменить",
   "button.save": "Сохранить",
+  "button.request-access": "Запросить доступ",
   "docspace.error.unreached": "ONLYOFFICE DocSpace недоступен",
   "docspace.error.login": "Не удалось идентифицировать пользователя",
   "docspace.error.loading": "Ошибка загрузки ONLYOFFICE DocSpace",
@@ -32,6 +35,8 @@
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
   "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
   "room.create.description": "Создайте комнату ONLYOFFICE DocSpace, чтобы эффективно работать совместно над данной сделкой",
+  "room.request-access.ok": "Вам успешно предоставлен доступ к комнате ONLYOFFICE DocSpace",
+  "room.request-access.error": "Ошибка при получении доступа к комнате ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "Пользователь системы не установлен.",
   "notification.plugin.set-system-user": "Пожалуйста, перейдите в Настройки и назначьте себя пользователем системы.",
   "notification.plugin.functionality-is-limited": "Функциональные возможности плагина ограничены.",
