--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -2,6 +2,7 @@
   "background.error.title.common": "Error",
   "background.error.title.token-expired": "The document security token has expired",
   "background.error.title.create-room": "Sorry, you don't have a permission to create rooms",
+  "background.error.title.no-room-access": "Sorry, you don't have access to this room",
   "background.error.subtitle.common": "Something went wrong. Please reload the app.",
   "background.error.subtitle.token-expired": "Something went wrong. Please re-authorize the app.",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App is not yet available",
@@ -10,6 +11,7 @@
   "background.error.subtitle.docspace-authorization.message": "Can not get authorize in ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Please go to the Authorization Setting to configure ONLYOFFICE DocSpace app settings",
   "background.error.subtitle.create-room": "Please ask a Pipedrive Administrator to create a room or contact a DocSpace admin to upgrade your role.",
+  "background.error.subtitle.no-room-access": "Please try to request access",
   "background.error.hint.admin.docspace-connection": "Please go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
   "button.reauthorize": "Re-authorize",
@@ -22,6 +24,7 @@
   "button.change": "Change",
   "button.cancel": "Cancel",
   "button.save": "Save",
+  "button.request-access": "Request access",
   "docspace.error.unreached": "ONLYOFFICE DocSpace cannot be reached",
   "docspace.error.login": "User authentication failed",
   "docspace.error.loading": "Error loading ONLYOFFICE DocSpace",
@@ -32,6 +35,8 @@
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
   "room.create.description": "Create ONLYOFFICE DocSpace room to easily collaborate on documents in this deal",
+  "room.request-access.ok": "You have been successfully granted access to the ONLYOFFICE DocSpace room",
+  "room.request-access.error": "Error getting access to the ONLYOFFICE DocSpace room",
   "notification.system-user.not-found": "System User is not set.",
   "notification.plugin.set-system-user": "Please go to Settings and set yourself as a System User.",
   "notification.plugin.functionality-is-limited": "Plugin functionality is limited.",
