--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -2,6 +2,7 @@
   "background.error.title.common": "Fehler",
   "background.error.title.token-expired": "Das Sicherheits-Token des Dokuments ist abgelaufen",
   "background.error.title.create-room": "Sie haben leider keine Berechtigung zum Erstellen von Räumen",
+  "background.error.title.no-room-access": "Sie haben leider keinen Zugang zu diesem Raum",
   "background.error.subtitle.common": "Etwas ist schief gelaufen. Bitte laden Sie die App neu.",
   "background.error.subtitle.token-expired": "Etwas ist schief gelaufen. Bitte autorisieren Sie die App erneut.",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App ist noch nicht verfügbar",
@@ -10,6 +11,7 @@
   "background.error.subtitle.docspace-authorization.message": "Kann keine Autorisierung in ONLYOFFICE DocSpace erhalten",
   "background.error.subtitle.docspace-authorization.help": "Bitte gehen Sie zu den Autorisierungseinstellungen, um die Einstellungen der ONLYOFFICE DocSpace App zu konfigurieren",
   "background.error.subtitle.create-room": "Bitten Sie einen Pipedrive-Administrator, einen Raum zu erstellen, oder kontaktieren Sie einen DocSpace-Administrator, um Ihre Rolle zu erweitern.",
+  "background.error.subtitle.no-room-access": "Bitte versuchen Sie, Zugang zu beantragen",
   "background.error.hint.admin.docspace-connection": "Bitte gehen Sie zu den Verbindungseinstellungen, um die Einstellungen der ONLYOFFICE DocSpace App zu konfigurieren.",
   "background.error.hint.docspace-connection": "Bitte wenden Sie sich an den Administrator.",
   "button.reauthorize": "Erneut autorisieren",
@@ -22,6 +24,7 @@
   "button.change": "Ändern",
   "button.cancel": "Abbrechen",
   "button.save": "Speichern",
+  "button.request-access": "Zugang beantragen",
   "docspace.error.unreached": "ONLYOFFICE DocSpace ist nicht erreichbar",
   "docspace.error.login": "Benutzerauthentifizierung fehlgeschlagen",
   "docspace.error.loading": "Fehler beim Laden von ONLYOFFICE DocSpace",
@@ -32,6 +35,8 @@
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
   "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum für die einfache Zusammenarbeit an Dokumenten in diesem Deal",
+  "room.request-access.ok": "Sie haben erfolgreich Zugang zum ONLYOFFICE DocSpace-Raum erhalten",
+  "room.request-access.error": "Fehler beim Erhalten des Zugangs zum ONLYOFFICE DocSpace-Raum",
   "notification.system-user.not-found": "System-Benutzer ist nicht eingestellt.",
   "notification.plugin.set-system-user": "Bitte gehen Sie zu Einstellungen und legen Sie sich als System-Benutzer fest.",
   "notification.plugin.functionality-is-limited": "Die Plugin-Funktionalität ist eingeschränkt.",
