--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -2,6 +2,7 @@
   "background.error.title.common": "Erreur",
   "background.error.title.token-expired": "Le jeton de sécurité du document a expiré",
   "background.error.title.create-room": "Désolé, vous n'avez pas l'autorisation de créer des salles",
+  "background.error.title.no-room-access": "Malheureusement, vous n'avez pas accès à cette salle",
   "background.error.subtitle.common": "Un problème s'est produit. Veuillez recharger l'application.",
   "background.error.subtitle.token-expired": "Un problème est survenu. Veuillez réautoriser l'application.",
   "background.error.subtitle.plugin.not-active.message": "L'application ONLYOFFICE DocSpace n'est pas encore disponible",
@@ -10,6 +11,7 @@
   "background.error.subtitle.docspace-authorization.message": "Impossible d'obtenir une autorisation dans ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Veuillez vous rendre sur la page des paramètres d'autorisation pour configurer les paramètres de l'application ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Veuillez demander à un administrateur Pipedrive de créer une salle ou contacter un administrateur DocSpace pour augmenter votre rôle.",
+  "background.error.subtitle.no-room-access": "Veuillez essayer de demander un accès",
   "background.error.hint.admin.docspace-connection": "Veuillez consulter les paramètres de connexion pour configurer les paramètres de l'application ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Veuillez contacter l'administrateur.",
   "button.reauthorize": "Re-autoriser",
@@ -22,6 +24,7 @@
   "button.change": "Modifier",
   "button.cancel": "Annuler",
   "button.save": "Enregistrer",
+  "button.request-access": "Demander l'accès",
   "docspace.error.unreached": "ONLYOFFICE DocSpace n'est pas accessible",
   "docspace.error.login": "Échec de l'authentification de l'utilisateur",
   "docspace.error.loading": "Erreur de chargement d'ONLYOFFICE DocSpace",
@@ -32,6 +35,8 @@
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
   "room.create.description": "Créez une salle ONLYOFFICE DocSpace pour collaborer facilement sur des documents dans le cadre de cette transaction",
+  "room.request-access.ok": "L'accès à la salle d'ONLYOFFICE DocSpace vous a été accordé avec succès",
+  "room.request-access.error": "Erreur d'accès à la salle d'ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "L'utilisateur du système n'est pas défini.",
   "notification.plugin.set-system-user": "Veuillez aller dans les paramètres et vous définir en tant qu'utilisateur du système.",
   "notification.plugin.functionality-is-limited": "La fonctionnalité du plugin est limitée.",
