--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -2,6 +2,7 @@
   "background.error.title.common": "Errore",
   "background.error.title.token-expired": "Il token di sicurezza del documento è scaduto",
   "background.error.title.create-room": "Spiacenti, non hai l'autorizzazione per creare stanze",
+  "background.error.title.no-room-access": "Siamo spiacenti, non hai accesso a questa stanza",
   "background.error.subtitle.common": "Qualcosa è andato storto. Ricarica l'app.",
   "background.error.subtitle.token-expired": "Qualcosa è andato storto. Autorizza nuovamente l'app.",
   "background.error.subtitle.plugin.not-active.message": "L'app ONLYOFFICE DocSpace non è ancora disponibile",
@@ -10,6 +11,7 @@
   "background.error.subtitle.docspace-authorization.message": "Impossibile ottenere l'autorizzazione in ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Vai alle impostazioni di autorizzazione per configurare le impostazioni dell'app ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Chiedi a un amministratore di Pipedrive di creare una stanza o contatta un amministratore di DocSpace per aggiornare il tuo ruolo.",
+  "background.error.subtitle.no-room-access": "Provare a richiedere l'accesso",
   "background.error.hint.admin.docspace-connection": "Accedi alle Impostazioni di connessione per configurare le impostazioni dell'app ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Contatta l'amministratore.",
   "button.reauthorize": "Riautorizza",
@@ -22,6 +24,7 @@
   "button.change": "Cambia",
   "button.cancel": "Annulla",
   "button.save": "Salva",
+  "button.request-access": "Richiedi l'accesso",
   "docspace.error.unreached": "Impossibile raggiungere ONLYOFFICE DocSpace",
   "docspace.error.login": "Autenticazione utente fallita",
   "docspace.error.loading": "Errore durante il caricamento di ONLYOFFICE DocSpace",
@@ -32,6 +35,8 @@
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
   "room.create.description": "Crea una stanza ONLYOFFICE DocSpace per collaborare facilmente sui documenti di questo accordo",
+  "room.request-access.ok": "L'accesso alla stanza ONLYOFFICE DocSpace è stato concesso",
+  "room.request-access.error": "Errore nell'accesso alla stanza ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "L'utente del sistema non è impostato.",
   "notification.plugin.set-system-user": "Vai su Impostazioni e impostati come Utente di sistema.",
   "notification.plugin.functionality-is-limited": "La funzionalità del plugin è limitata.",
