--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -2,6 +2,7 @@
   "background.error.title.common": "エラー",
   "background.error.title.token-expired": "ドキュメントのセキュリティトークンが期限切れです",
   "background.error.title.create-room": "申し訳ありませんが、ルームを作成する権限がありません",
+  "background.error.title.no-room-access": "申し訳ありませんが、このルームにはアクセスできません。",
   "background.error.subtitle.common": "何か問題が発生しました。アプリを再読み込みしてください。",
   "background.error.subtitle.token-expired": "何か問題が発生しました。アプリを再承認してください。",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace アプリはまだ利用できません",
@@ -10,6 +11,7 @@
   "background.error.subtitle.docspace-authorization.message": "ONLYOFFICE DocSpace で承認を取得できません",
   "background.error.subtitle.docspace-authorization.help": "ONLYOFFICE DocSpace アプリの設定を構成するには、承認設定に移動してください",
   "background.error.subtitle.create-room": "ルームを作成するには、Pipedrive 管理者にお問い合わせいただくか、または、ロールをアップグレードするには、DocSpace 管理にお問い合わせください。",
+  "background.error.subtitle.no-room-access": "アクセスをリクエストしてください",
   "background.error.hint.admin.docspace-connection": "ONLYOFFICE DocSpace アプリの設定を行うには、接続設定に移動してください。",
   "background.error.hint.docspace-connection": "管理者にお問い合わせください。",
   "button.reauthorize": "再認証",
@@ -22,6 +24,7 @@
   "button.change": "変更",
   "button.cancel": "キャンセル",
   "button.save": "保存",
+  "button.request-access": "アクセスをリクエストする",
   "docspace.error.unreached": "ONLYOFFICE DocSpace に接続できません",
   "docspace.error.login": "ユーザー認証に失敗しました",
   "docspace.error.loading": "ONLYOFFICE DocSpace の読み込みエラー",
@@ -32,6 +35,8 @@
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
   "room.create.description": "この案件のドキュメントで簡単に共同作業を行うために、ONLYOFFICE DocSpace ルームを作成してください",
+  "room.request-access.ok": "ONLYOFFICE DocSpaceルームへのアクセスが許可されました。",
+  "room.request-access.error": "ONLYOFFICE DocSpaceルームへのアクセスエラー",
   "notification.system-user.not-found": "システムユーザーが設定されていません。",
   "notification.plugin.set-system-user": "設定に移動して、ご自身をシステムユーザーとして設定してください。",
   "notification.plugin.functionality-is-limited": "プラグインの機能は制限されています。",
