--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -2,6 +2,7 @@
   "background.error.title.common": "Error",
   "background.error.title.token-expired": "El token de seguridad del documento ha expirado",
   "background.error.title.create-room": "Lo sentimos, no tiene permiso para crear salas",
+  "background.error.title.no-room-access": "Lo sentimos, no tiene acceso a esta sala",
   "background.error.subtitle.common": "Algo ha salido mal. Por favor, vuelva a cargar la aplicación.",
   "background.error.subtitle.token-expired": "Algo ha salido mal. Por favor, vuelva a autorizar la aplicación.",
   "background.error.subtitle.plugin.not-active.message": "La aplicación ONLYOFFICE DocSpace todavía no está disponible",
@@ -10,6 +11,7 @@
   "background.error.subtitle.docspace-authorization.message": "No se puede autorizar en ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Por favor, acceda a la Configuración de autorización para configurar los ajustes de la aplicación ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Por favor, pida a un administrador de Pipedrive que cree una sala o contacte con un administrador de DocSpace para actualizar su rol.",
+  "background.error.subtitle.no-room-access": "Por favor, intente solicitar acceso",
   "background.error.hint.admin.docspace-connection": "Por favor, acceda a la Configuración de conexión para configurar los ajustes de la aplicación ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Por favor, póngase en contacto con el administrador.",
   "button.reauthorize": "Volver a autorizar",
@@ -22,6 +24,7 @@
   "button.change": "Cambiar",
   "button.cancel": "Cancelar",
   "button.save": "Guardar",
+  "button.request-access": "Solicitar acceso",
   "docspace.error.unreached": "ONLYOFFICE DocSpace no está disponible",
   "docspace.error.login": "Error de autenticación de usuario",
   "docspace.error.loading": "Error al cargar ONLYOFFICE DocSpace",
@@ -32,6 +35,8 @@
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
   "room.create.description": "Cree una sala de ONLYOFFICE DocSpace para colaborar fácilmente en los documentos de este acuerdo",
+  "room.request-access.ok": "Se le ha concedido correctamente el acceso a la sala de ONLYOFFICE DocSpace",
+  "room.request-access.error": "Error al acceder a la sala de ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "El usuario del sistema no está configurado.",
   "notification.plugin.set-system-user": "Por favor, acceda a Configuración y establézcase como usuario del sistema.",
   "notification.plugin.functionality-is-limited": "La funcionalidad del plugin está limitada.",
