--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -2,6 +2,7 @@
   "background.error.title.common": "Erro",
   "background.error.title.token-expired": "O token de segurança do documento expirou",
   "background.error.title.create-room": "Desculpe, você não tem permissão para criar salas",
+  "background.error.title.no-room-access": "Desculpe, você não tem acesso a esta sala",
   "background.error.subtitle.common": "Algo deu errado. Recarregue o aplicativo.",
   "background.error.subtitle.token-expired": "Algo deu errado. Reautorize o aplicativo.",
   "background.error.subtitle.plugin.not-active.message": "O aplicativo ONLYOFFICE DocSpace ainda não está disponível",
@@ -10,6 +11,7 @@
   "background.error.subtitle.docspace-authorization.message": "Não é possível obter autorização no ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Vá para a Configuração de autorização para configurar as configurações do aplicativo ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Peça a um administrador do Pipedrive para criar uma sala ou entre em contato com um administrador do DocSpace para atualizar sua função.",
+  "background.error.subtitle.no-room-access": "Por favor, tente solicitar acesso",
   "background.error.hint.admin.docspace-connection": "Por favor, vá para a Configuração de conexão para configurar as configurações do aplicativo ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Entre em contato com o administrador.",
   "button.reauthorize": "Reautorizar",
@@ -22,6 +24,7 @@
   "button.change": "Alterar",
   "button.cancel": "Cancelar",
   "button.save": "Salvar",
+  "button.request-access": "Solicitar acesso",
   "docspace.error.unreached": "ONLYOFFICE DocSpace não pode ser acessado",
   "docspace.error.login": "Falha na autenticação do usuário",
   "docspace.error.loading": "Erro ao carregar o ONLYOFFICE DocSpace",
@@ -32,6 +35,8 @@
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
   "room.create.description": "Crie uma sala ONLYOFFICE DocSpace para colaborar facilmente em documentos neste acordo",
+  "room.request-access.ok": "Você obteve acesso com sucesso à sala do ONLYOFFICE DocSpace",
+  "room.request-access.error": "Erro ao obter acesso à sala do ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "O usuário do sistema não está definido.",
   "notification.plugin.set-system-user": "Vá para Configurações e defina-se como um usuário do sistema.",
   "notification.plugin.functionality-is-limited": "A funcionalidade do plugin é limitada.",
